# QT_qq

./: CCMainWindow.cpp  CCMainWindow.h  CCMainWindow.qrc  CCMainWindow.ui  CMakeLists.txt  CommonUtils.cpp  CommonUtils.h  ContactItem.cpp  ContactItem.h  ContactItem.ui  CustomMenu.cpp  CustomMenu.h  EmotionLabelItem.cpp  EmotionLabelItem.h  EmotionWindow.cpp  EmotionWindow.h  MsgWebView.cpp  MsgWebView.h  NotifyManager.cpp  NotifyManager.h  QClickLabel.cpp  QClickLabel.h  QMsgTextEdit.cpp  QMsgTextEdit.h  QtQQ.sln  QtQQ.vcxproj  QtQQ.vcxproj.filters  QtWidgetsApplicationQQ.sln  QtWidgetsApplicationQQ.vcxproj  QtWidgetsApplicationQQ.vcxproj.filters  README.MD  README.md  ReceiveFile.cpp  ReceiveFile.h  RootContatItem.cpp  RootContatItem.h  SendFile.cpp  SendFile.h  SkinWindow.cpp  SkinWindow.h  (+65 more)
Resources/MainWindow/MsgHtml/: recvHtml.txt
x64/Debug/: QtWidgetsApplicationQQ.exe.recipe  QtWidgetsApplicationQQ.vcxproj.FileListAbsolute.txt  msado15.tlh  msado15.tli
x64/Debug/QtWidget.2644AF34.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  QtWidgetsApplicationQQ.lastbuildstate  QtWidgetsApplicationQQ.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
x64/Debug/moc/: moc_CCMainWindow.cpp  moc_basicwindow.cpp  moc_contactitem.cpp  moc_custommenu.cpp  moc_emotionlabelitem.cpp  moc_emotionwindow.cpp  moc_msgwebview.cpp  moc_notifymanager.cpp  moc_qclicklabel.cpp  moc_qmsgtextedit.cpp  moc_rootcontactitem.cpp  (+9 more)
(+13 files in other folders)
